# video-creator

./: .env.example  .gitignore  AI_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  Agents.md  CI-CD-QUICK-START.md  CLOUD_STORAGE_REMOVED.md  COMPLETE_DOCUMENTATION.md  DIAGRAMS_MCP_SETUP.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  MINIMAX_API_POLLING_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  VOICE_CLONE_IMPLEMENTATION_COMPLETE.md  conftest.py  create_architecture_diagram.py  pyproject.toml  requirements-dev.txt  run_all_tests.py  setup.cfg  test_ai_prompts.py  test_mcp_servers.py  test_video_workflow.py  test_voice_clone.py
HELPER/: vscode-shortcuts.md
ai-video-creator-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_segments.py  merge_api_responses.py  pyproject.toml  pytest.ini  setup.ps1  test_minimax_chained_video.py  test_minimax_real.py  test_minimax_video.py  test_openai_plan.py
ai-video-creator-backend/.github/workflows/: backend-ci.yml  backend-deploy.yml
ai-video-creator-backend/alembic/: env.py
ai-video-creator-backend/alembic/versions/: 001_initial.py  002_jwt_auth.py  003_voices.py
ai-video-creator-backend/app/: __init__.py  config.py  main.py
ai-video-creator-backend/app/agents/: __init__.py  plan_generator.py
ai-video-creator-backend/app/api/: __init__.py  deps.py
ai-video-creator-backend/app/api/v1/: auth.py  generation.py  media.py  projects.py  router.py  segments.py  voices.py
ai-video-creator-backend/app/auth/: __init__.py  azure_auth.py  jwt_auth.py
ai-video-creator-backend/app/db/: __init__.py  base.py  session.py
ai-video-creator-backend/app/db/models/: __init__.py  project.py  segment.py  user.py  voice.py
ai-video-creator-backend/app/integrations/: __init__.py  ffmpeg_wrapper.py  minimax_client.py
ai-video-creator-backend/app/models/: __init__.py  base.py  generation.py  project.py  segment.py  user.py  voice.py
ai-video-creator-backend/app/services/: __init__.py  media_service.py  orchestrator_service.py  project_service.py  user_service.py
ai-video-creator-backend/tests/: conftest.py  test_auth.py  test_generation.py  test_health.py  test_media.py  test_projects.py  test_segments.py
ai-video-creator-backend/tests/e2e/: test_segments.py  test_workflow.py
ai-video-creator-backend/tests/fixtures/: MINIMAX_API_REFERENCE.md  README.md  all_api_responses.json  minimax_chained_video_responses.json  minimax_mocks.py  minimax_real_responses.json  minimax_video_responses.json  openai_plan_responses.json
ai-video-creator-frontend/: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.d.ts  playwright.config.js  playwright.config.ts  setup.ps1  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
docs/: GCP_SETUP.md  MCP_SETUP.md  PROJECT_SETUP_COMPLETE.md
implementation-plan/: 01-MVP-DEFINITION.md  02-PRD.md  03-ARCHITECTURE.md  04-BACKEND-IMPLEMENTATION.md  05-FRONTEND-IMPLEMENTATION.md  06-AZURE-ENTRA-SETUP.md  06-JWT-AUTHENTICATION-SETUP.md  07-CI-CD-PIPELINE.md  07-CI-CD-SETUP-CHECKLIST.md  08-E2E-TESTING.md  09-GITHUB-ENVIRONMENTS-SETUP.md
infra/: .gitignore  README.md  deploy-frontend-containerapp.ps1  main.bicep
src/: README.md  (+4 more)
(+88 files in other folders)
